--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,11 @@
 div#header
+    a(href="/") Home 
+    | 
     a(href="/sign-in") Sign In/Sign Up
-    |
-    a(href="/myprofile") Profile
-    |
+    | 
+    a(href="/myprofile") Profile 
+    | 
     a(href="/advancedsearch") Search
-    |
+    | 
     a(href="/contribute") Contribute
-    |
+    | 
