New pages for advanced search and contribute also updates to project-server

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -7,3 +7,12 @@ body
     div#main
         h1 Welcome to the Movie Database! 
         br
+        br
+        b Username: 
+        input(type="text" id="userName_in")
+        br
+        b Password:
+        input(type="text" id="password_in")
+        br
+        button(type="button" id="log_in") Log In
+        button(type="button" id="sign_up") Sign Up
