Profile finished with sample data link pages are not all active yet

--- a/views/pages/contribute.pug
+++ b/views/pages/contribute.pug
@@ -9,7 +9,7 @@ body
         h2 Add a new Person:
         br
         b Name:
-        input(type="text" id="new_person")
+        input(type="text" id="new_person" required)
         br
         button(type="button" id="add_person") Add
         br
@@ -20,28 +20,28 @@ body
         h2 Add a new Movie:
         br
         b Title:
-        input(type="text" id="title_in")
+        input(type="text" id="title_in" required)
         br
         b Release Year:
-        input(type="text" id="release_in")
+        input(type="text" id="release_in" required)
         br
         b Runtime:
-        input(type="text" id="length_in")
+        input(type="text" id="length_in" required)
         br
         b Plot:
-        input(type="text" id="plot_in")
+        input(type="text" id="plot_in" required)
         br
         b Genre:
-        input(type="text" id="genre_in")
+        input(type="text" id="genre_in" required)
         br
         b Director:
-        input(type="text" id="director_in")
+        input(type="text" id="director_in" required)
         br
         b Writer:
-        input(type="text" id="writer_in")
+        input(type="text" id="writer_in" required)
         br
         b Actor:
-        input(type="text" id="actor_in")
+        input(type="text" id="actor_in" required)
         br
         
         button(type="button" id="add_movie") Add
