--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -12,7 +12,7 @@ body
         input(type="text" id="userName_in")
         br
         b Password:
-        input(type="text" id="password_in")
+        input(type="password" id="password_in")
         br
         button(type="button" id="log_in") Log In
         button(type="button" id="sign_up") Sign Up
