--- a/views/pages/MoviePreview.pug
+++ b/views/pages/MoviePreview.pug
@@ -2,6 +2,7 @@ head
     link(rel='stylesheet' href='/stylesheet.css')
     title Movie:#{currMovie.Title} 
     meta(name='viewport' content='width=device-width, initial-scale=1')
+    include ../partials/header
     div#poster
         img(src=currMovie.Poster)
 #descriptor
