--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,6 @@
+link(rel='stylesheet' href='/stylesheet.css')
 div#header
-    a(href="/") Home 
-    | 
-    a(href="/myprofile") Profile 
-    | 
-    a(href="/advancedsearch") Search
-    | 
-    a(href="/contribute") Contribute
-    | 
+    a.header(href="/") Home &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    a.header(href="/myprofile") Profile &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    a.header(href="/advancedsearch") Search &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    a.header(href="/contribute") Contribute
