--- a/views/pages/searchResults.pug
+++ b/views/pages/searchResults.pug
@@ -1,7 +1,8 @@
-head
-    link(rel='stylesheet' href='/stylesheet.css')
-    title Search Results
-    meta(name='viewport' content='width=device-width, initial-scale=1')
+html
+    head
+        link(rel='stylesheet' href='/stylesheet.css')
+        title Search Results
+        meta(name='viewport' content='width=device-width, initial-scale=1')
 #descriptor
 
     if results.length > 0
